# server

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_alert_muted_until.py  0003_create_funnels_table.py  0004_users_and_project_owner.py  0005_owner_user_id_not_null.py  0006_visitor_hash_ua_columns.py
app/: extensions.py  main.py  plugins.py
app/api/: ingestion.py  projects.py  webhook.py
app/bot/: auth.py  constants.py  setup.py
app/bot/handlers/: alerts.py  events.py  funnels.py  onboarding.py  projects.py  reports.py  settings.py  system.py  visitors.py
app/core/: config.py  database.py  privacy.py  redis_client.py  security.py
app/jobs/: __init__.py  retention.py  scheduler.py
app/models/: __init__.py  alert.py  event.py  funnel.py  project.py  user.py
app/schemas/: event.py
app/services/: aggregation.py  alerts.py  analytics.py  charts.py  events.py  funnels.py  projects.py
scripts/: export_openapi.py
tests/: conftest.py  test_alerts.py  test_auth_resolver.py  test_e2e.py  test_extension_bot_filter.py  test_extension_error_surfacing.py  test_extension_project_pre_create.py  test_extension_user_resolver.py  test_extensions_e2e.py  test_extensions_registry.py  test_health.py  test_ingestion_privacy.py  test_log_redaction.py  test_onboarding.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_plugins.py  test_privacy_hashing.py  test_privacy_salt.py  test_privacy_scrub.py  test_reports.py  test_retention_job.py  test_settings_handler.py  test_users_and_project_owner.py
tests/fixtures/: dummy_plugin.py  reference_plugin.py  resolver_plugin.py
